--- a/pylibcdr/CMakeLists.txt
+++ b/pylibcdr/CMakeLists.txt
@@ -8,8 +8,8 @@ find_package (PythonLibs REQUIRED)
 find_package(libcdr REQUIRED)
 find_package(librevenge REQUIRED)
 include_directories(${LIBCDR_INCLUDE_DIRS} ${LIBREVENGE_INCLUDE_DIRS} ${PYTHON_INCLUDE_DIRS})
-add_library(pylibcdr SHARED pylibcdr.cpp core/cdr_iface.cxx ${libcdr})
-target_link_libraries(pylibcdr ${LIBCDR_LIBRARY} ${LIBREVENGE_LIBRARIES})
+add_library(cdr_interface SHARED libcdr_interface.cpp core/parser.cxx ${libcdr})
+target_link_libraries(cdr_interface ${LIBCDR_LIBRARY} ${LIBREVENGE_LIBRARIES})
 
 set(CPACK_PROJECT_NAME ${PROJECT_NAME})
 set(CPACK_PROJECT_VERSION ${PROJECT_VERSION})
