Build library against correct Python headers

--- a/pylibcdr/CMakeLists.txt
+++ b/pylibcdr/CMakeLists.txt
@@ -2,8 +2,8 @@ cmake_minimum_required(VERSION 3.0.0)
 project(CDR_interface VERSION 0.1.0)
 
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/cmake")
-find_package (PythonInterp REQUIRED)                                   
-find_package (PythonLibs REQUIRED)                                     
+find_package (PythonInterp ${PYTHON_VERSION} REQUIRED)                                   
+find_package (PythonLibs ${PYTHON_VERSION} REQUIRED)                                     
 # find_package (Python COMPONENTS Interpreter Development REQUIRED)     
 find_package(libcdr REQUIRED)
 find_package(librevenge REQUIRED)
